# tiny-llm-infer

./: .clang-format  .gitignore  CMakeLists.txt  output.md  run.sh
include/: Model.hpp  Operaters.hpp  operators.hpp  sampler.hpp
old/reduce/: reduce.cu
src/: qwen3.cpp
src/operators/common/: utils.cuh
src/operators/layernorm/: layernorm.cu
src/operators/matmul/: matmul_kernel.cuh  test.cu
src/operators/rmsnorm/: rmsnorm.cuh  rmsnorm_gpt.cu  test.cu
src/operators/sgemm/: benchmark.cu  sgemm_kernel.cuh  test.cu  utils.cuh
src/operators/sgemv/: sgemv.cu  sgemv_cub.cu
src/operators/softmax/: softmax.cu
src/operators/transpose/: transpose.cu
